--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/stepaan/veb5.2.0#readme",
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.0",
     "husky": "^4.0.10",
     "prettier": "^1.19.1"
   }
