--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "eslint index.js",
     "prettier": "prettier --config .prettierrc.json index.js"
   },
