--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ install: npm install
 script: npm test
 notifications:
   email: false
+deploy:
+  provider: heroku
+  app_key:
+    secure: $API_KEY
