--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
 - 12
-install: npm install
 script: npm test
 notifications:
   email: false
+branche:
+  only:
+    - master
