--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "test": "eslint index.js",
-    "prettier": "prettier --config .prettierrc.json index.js"
+    "prettier": "prettier --config .prettierrc.json index.js",
+    "hooks": {
+  "precommit": "npm run prettier",
+    "prepush": "call npm run test"
+    }
   },
   "repository": {
     "type": "git",
