--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "eslint index.js",
     "prettier": "prettier --config .prettierrc.json index.js",
     "hooks": {
-  "precommit": "npm run prettier",
-    "prepush": "call npm run test",
-        "start": "node index.js"
-    }
+    "precommit": "npm run prettier",
+    "prepush": "call npm run test"
+    },
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
